# DSignaLib

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
BuildScripts/: Dockerfile
doc/: doxyfile
include/: filterfir.h  filteriir.h  rms.h  sample.h  signalprocessor.h  signalprocessorbuffered.h  signalvector.h
include/dsignal/: abs.h  additionner.h  arithmeticmean.h  dcmeanremoval.h  decimator.h  decimatormean.h  filterfir.h  filteriir.h  max.h  min.h  mixeroperation.h  mixeroperationsubtract.h  multiplier.h  rms.h  sample.h  signalflow.h  signalflowsession.h  signalprocessor.h  signalprocessorbuffered.h  signalprocessorsimple.h  signalsplitter.h  signalvector.h  signalvectormixer.h  version.h.in  zerocrossing.h
src/: CMakeLists.txt  abs.cpp  additionner.cpp  arithmeticmean.cpp  dcmeanremoval.cpp  decimator.cpp  decimatormean.cpp  filterfir.cpp  filteriir.cpp  max.cpp  min.cpp  mixeroperationsubtract.cpp  multiplier.cpp  rms.cpp  sample.cpp  signalflow.cpp  signalflowsession.cpp  signalprocessorbuffered.cpp  signalprocessorsimple.cpp  signalsplitter.cpp  signalvector.cpp  signalvectormixer.cpp  zerocrossing.cpp
tests/: CMakeLists.txt  abs.test.cpp  additionner.test.cpp  arithmeticmean.test.cpp  dcmeanremoval.test.cpp  decimator.test.cpp  decimatormean.test.cpp  filterfir.test.cpp  filteriir.test.cpp  main.cpp  max.test.cpp  min.test.cpp  multiplier.test.cpp  rms.test.cpp  signalflow.test.cpp  signalpipeline.test.cpp  signalprocessorbuffered.test.cpp  signalsplitter.test.cpp  signalvector.test.cpp  signalvectormixer.test.cpp  zerocrossing.test.cpp
tests/filterfir/: filterfir.pro  tst_filterfir.cpp
tests/filteriir/: filteriir.pro  tst_filteriir.cpp
tests/rms/: rms.pro  tst_rms.cpp
tests/signalpipeline/: signalpipeline.pro  tst_signalpipeline.cpp
tests/signalprocessorbuffered/: signalprocessorbuffered.pro  tst_signalprocessorbufferedtest.cpp
tests/signalvector/: signalvector.pro  tst_signalvector.cpp
